--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     PrImBoard
   </h1>
   <button mat-button routerLink="/">Home</button>
-  <button mat-button routerLink="/about">About</button>
+  <button mat-button routerLink="/invite">Invite</button>
 </mat-toolbar>
 <!-- <app-home></app-home> -->
 <router-outlet></router-outlet>
