added primitive user invite frontend

--- a/src/app/components/invite/invite.component.html
+++ b/src/app/components/invite/invite.component.html
@@ -36,6 +36,6 @@
       </mat-form-field>
 
     </div>
-    <button type="submit" [disabled]="!cuForm.valid">Submit</button>
+    <button type="submit" mat-raised-button color="primary" [disabled]="!cuForm.valid">Submit</button>
   </div>
 </form>
