--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,19 +1,18 @@
-<div style="padding: 13px;">
+<!-- <mat-grid-list cols="4" rowHeight="128px">
   <mat-spinner *ngIf="media.length === 0"></mat-spinner>
-
-  <mat-card *ngFor="let m of media" style="margin-top:10px;">
-      <mat-card-header>
-          <mat-card-title>{{m.title}}</mat-card-title>
-          <mat-card-subtitle>{{m.type}} | {{m.format}}
-          </mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-content>
-          <p>
-              {{m.description}}
-          </p>
-      </mat-card-content>
-      <mat-card-actions>
-    <button mat-button> Buy product</button>
-  </mat-card-actions>
-  </mat-card>
+  <mat-grid-tile id="{{m._id}}" (click)="printHi()" *ngFor="let m of media">
+    <div>
+        <img src="{{m.urlthumb}}" alt="Image" />
+    </div>
+  </mat-grid-tile>
+</mat-grid-list> -->
+<!-- <div class="media-row" (click)="printHi()" *ngFor="let m of temp(math.ceil(media.length/2)).fill(); let i = index">
+  <a *ngFor="let item of media.slice(2*i,2*i + 2);">
+    <img src="{{item.urlthumb}}" alt="Image" />
+  </a>
+</div> -->
+<div class="grid">
+  <div *ngFor="let m of media" class="module">
+    <img src="{{m.url}}" alt="{{m.url}}"/>
+  </div>
 </div>
