--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
   </h1>
   <button mat-button routerLink="/">Home</button>
   <button mat-button routerLink="/invite">Invite</button>
+  <button mat-button routerLink="/upload">Upload</button>
 </mat-toolbar>
 <!-- <app-home></app-home> -->
 <router-outlet></router-outlet>
