--- a/src/app/components/media/media.component.html
+++ b/src/app/components/media/media.component.html
@@ -21,7 +21,7 @@
   </ng-template>
   <ng-template #knownDate>
     {{med.timestamp * 1000 | date: 'yyyy-MM-dd'}}
-    {{med.timestamp_upload * 1000 | date}}
+    {{med.timestampUpload * 1000 | date}}
   </ng-template>
   <ng-template #unknownDate>
     Created: <i>&lt;unknown&gt;</i><br>
