--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,7 @@
 <div class="grid">
   <div *ngFor="let m of media" class="module">
     <!-- <a href="/media/{{m.sha1}}"> -->
-      <img src="{{m.url}}" alt="{{m.url}}" [routerLink]="'/media/'+m.sha1"/>
+      <img src="{{m.urlthumb}}" alt="{{m.urlthumb}}" [routerLink]="'/media/'+m.sha1+'_'+m.id"/>
     <!-- </a> -->
   </div>
 </div>
