--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     PrImBoard
   </h1>
   <button mat-button routerLink="/">Home</button>
+  <button mat-button routerLink="/events">Events</button>
   <button mat-button routerLink="/invite">Invite</button>
   <button mat-button routerLink="/upload">Upload</button>
   <span class="spacer"></span>
