--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,19 +1,26 @@
-<div class="align-center">
-  <div class="example-container">
-    <form [formGroup]="loginForm" (ngSubmit)="submitlForm()">
-      <mat-form-field>
-        <input matInput placeholder="Username" formControlName="username" minlength="1">
-      </mat-form-field>
-
-      <mat-form-field>
-        <input matInput placeholder="Enter your password" [type]="show ? 'text' : 'password'"
-          formControlName="password" minlength="1">
-        <button mat-icon-button matSuffix (click)="show = !show" [attr.aria-label]="'Show password'"
-          [attr.aria-pressed]="show">
-          <mat-icon>{{show ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
-      </mat-form-field>
-      <button type="submit" mat-raised-button color="primary">Submit</button>
-    </form>
-  </div>
+<div class="signin-content">
+  <mat-card>
+    <mat-card-content>
+      <form [formGroup]="loginForm" (ngSubmit)="submitlForm()">
+        <p>Please login to continue</p>
+        <mat-form-field class="full-width-input">
+          <input matInput placeholder="User" formControlName="username" required>
+          <mat-error *ngIf="isFieldInvalid('username')">
+            Please provide your user name
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field class="full-width-input">
+          <input matInput type="password" placeholder="Password" formControlName="password" [type]="show ? 'text' : 'password'" required>
+          <button mat-icon-button matSuffix (click)="show = !show" [attr.aria-label]="'Show password'"
+            [attr.aria-pressed]="show" type="button">
+            <mat-icon>{{show ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
+          <mat-error *ngIf="isFieldInvalid('password')">
+            Please provide your password
+          </mat-error>
+        </mat-form-field>
+        <button mat-raised-button color="primary" type="submit">Login</button>
+      </form>
+    </mat-card-content>
+  </mat-card>
 </div>
