--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
   <button mat-button routerLink="/invite">Invite</button>
   <button mat-button routerLink="/upload">Upload</button>
   <span class="spacer"></span>
+  <button mat-icon-button aria-label="Add Event" routerLink="/event/new" *ngIf="route.url == '/events'">
+    <mat-icon>add</mat-icon>
+  </button>
   <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
     <mat-icon>more_vert</mat-icon>
   </button>
@@ -20,4 +23,3 @@
 <!-- <app-home></app-home> -->
 <router-outlet></router-outlet>
 <!-- <app-footer></app-footer> -->
-
