--- a/src/app/components/media/media.component.html
+++ b/src/app/components/media/media.component.html
@@ -1,30 +1,59 @@
 <div *ngIf="med != null" class="container-fluid">
   <div class="row">
     <div class="col-lg-9 col-md-12 order-lg-12">
-      <img style="max-width:100%;max-height: 100%;" class="pull-right" src="{{med.url}}">
+      <!-- <img style="max-width:100%;max-height: 100%;" class="pull-right" src="{{med.url}}"> -->
     </div>
     <div class="col-lg-3 col-md-12 order-lg-1">
-      <ng-container *ngIf="med.title != null; then knownTitle; else unknownTitle">
-      </ng-container>
+      <b>{{med.title != null ? med.title : "&lt;unknown title&gt;"}}</b>
+      <button mat-icon-button aria-label="Edit">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <br>
       <ng-container *ngIf="med.timestamp != null; then knownDate; else unknownDate">
       </ng-container>
       <p *ngIf="med.description != null">{{med.description}}</p>
-      <!-- <p><b>Tags</b></p>
-      <p><b>Kommentare</b></p> -->
+      <p><b>Tags</b></p>
+      <ng-container *ngIf="med.tags == null else tags">
+
+      </ng-container>
+      <form [formGroup]="tagForm" (ngSubmit)="submitTagForm()">
+        <mat-form-field class="full-width-input" class="example-container">
+          <input matInput placeholder="Tags (kommasepariert)" type="text" formControlName="name" [matAutocomplete]="auto">
+          <mat-autocomplete autoActivateFirstOption #auto="matAutocomplete">
+            <mat-option *ngFor="let tag of tagAutoComplete$ | async; let index = index" [value]="tag.name">
+              {{ tag.name }}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+        <button mat-flat-button color="primary" type="submit">Save Tags</button>
+        <button mat-flat-button type="button">Cancel</button>
+      </form>
+      <!-- <form class="tag-form" method="post" style="display: block;"> <input type="text" class="item-tagsinput"
+          name="tags" style="display: none;" id="tags1579097315245">
+        <div id="tags1579097315245_tagsinput" class="tagsinput item-tagsinput">
+          <div style="float: left;" id="tags1579097315245_addTag"><input id="tags1579097315245_tag" value=""
+              class="tagsinput-writebox tagsinput-placeholder ui-autocomplete-input" maxlength="32"
+              data-default="Tags hinzufügen, mit Komma trennen" style="width: 248px;" autocomplete="off"></div>
+          <div class="tags_clear"></div>
+        </div> <input type="hidden" name="itemId" value="3632418"> <input type="submit" value="Tags speichern"> <input
+          type="button" value="Abbrechen" class="cancel">
+      </form> -->
+      <!-- <p><b>Kommentare</b></p> -->
     </div>
   </div>
-  <ng-template #knownTitle>
-    <b>{{med.title}}</b><br>
-  </ng-template>
-  <ng-template #unknownTitle>
-    <b>&lt;unknown title&gt;</b><br>
-  </ng-template>
   <ng-template #knownDate>
-    {{med.timestamp * 1000 | date: 'yyyy-MM-dd'}}
-    {{med.timestampUpload * 1000 | date}}
+    Created: {{med.timestamp * 1000 | date: 'dd.MM.yyyy'}}<br>
+    Added: {{med.timestampUpload * 1000 | date: 'dd.MM.yyyy'}}
   </ng-template>
   <ng-template #unknownDate>
     Created: <i>&lt;unknown&gt;</i><br>
     Added: {{med.timestampUpload * 1000 | date}}
+  </ng-template>
+  <ng-template #tags>
+    <div class="tags">
+      <span class="tag" *ngFor="let tag of med.tags">
+        <a class="tag-link" href="/tag/{{tag.name}}">{{tag.name}}</a>
+      </span>
+    </div>
   </ng-template>
 </div>
