--- a/src/app/components/media/media.component.html
+++ b/src/app/components/media/media.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="med != null" class="container-fluid">
   <div class="row">
     <div class="col-lg-9 col-md-12 order-lg-12">
-      <!-- <img style="max-width:100%;max-height: 100%;" class="pull-right" src="{{med.url}}"> -->
+      <img style="max-width:100%;max-height: 100%;" class="pull-right" src="{{med.url}}">
     </div>
     <div class="col-lg-3 col-md-12 order-lg-1">
       <b>{{med.title != null ? med.title : "&lt;unknown title&gt;"}}</b>
