--- a/src/app/components/media/media.component.html
+++ b/src/app/components/media/media.component.html
@@ -1,9 +1,9 @@
-<div *ngIf="med != null" class="container-fluid">
+<div *ngIf="med != null" class="container page-fixed">
   <div class="row">
-    <div class="col-lg-9 col-md-12 order-lg-12">
+    <div class="col-lg-9 col-md-12 order-lg-12 media-image">
       <img style="max-width:100%;max-height: 100%;" class="pull-right" src="{{med.url}}">
     </div>
-    <div class="col-lg-3 col-md-12 order-lg-1">
+    <div class="col-lg-3 col-md-12 order-lg-1 media-info">
       <b>{{med.title != null ? med.title : "&lt;unknown title&gt;"}}</b>
       <button mat-icon-button aria-label="Edit">
         <mat-icon>edit</mat-icon>
@@ -12,11 +12,13 @@
       <ng-container *ngIf="med.timestamp != null; then knownDate; else unknownDate">
       </ng-container>
       <p *ngIf="med.description != null">{{med.description}}</p>
-      <p><b>Tags</b></p>
+      <p class="no-margin-bottom"><b>Tags</b>
+      <button mat-icon-button (click)="addTagShown=true" *ngIf="!addTagShown">
+        <mat-icon>add</mat-icon>
+      </button></p>
       <ng-container *ngIf="med.tags == null else tags">
-
       </ng-container>
-      <form [formGroup]="tagForm" (ngSubmit)="submitTagForm()">
+      <form [formGroup]="tagForm" (ngSubmit)="submitTagForm()" *ngIf="addTagShown">
         <mat-form-field class="full-width-input" class="example-container">
           <input matInput placeholder="Tags (kommasepariert)" type="text" formControlName="name" [matAutocomplete]="auto">
           <mat-autocomplete autoActivateFirstOption #auto="matAutocomplete">
@@ -26,19 +28,22 @@
           </mat-autocomplete>
         </mat-form-field>
         <button mat-flat-button color="primary" type="submit">Save Tags</button>
-        <button mat-flat-button type="button">Cancel</button>
+        <button mat-flat-button type="button" (click)="addTagShown=false">Cancel</button>
       </form>
-      <!-- <form class="tag-form" method="post" style="display: block;"> <input type="text" class="item-tagsinput"
-          name="tags" style="display: none;" id="tags1579097315245">
-        <div id="tags1579097315245_tagsinput" class="tagsinput item-tagsinput">
-          <div style="float: left;" id="tags1579097315245_addTag"><input id="tags1579097315245_tag" value=""
-              class="tagsinput-writebox tagsinput-placeholder ui-autocomplete-input" maxlength="32"
-              data-default="Tags hinzufügen, mit Komma trennen" style="width: 248px;" autocomplete="off"></div>
-          <div class="tags_clear"></div>
-        </div> <input type="hidden" name="itemId" value="3632418"> <input type="submit" value="Tags speichern"> <input
-          type="button" value="Abbrechen" class="cancel">
-      </form> -->
-      <!-- <p><b>Kommentare</b></p> -->
+      <p class="no-margin-bottom"><b>Kommentare</b></p>
+      <ng-container *ngIf="med.comments == null else comments">
+
+      </ng-container>
+      <button mat-flat-button color="primary" (click)="addCommentShown=true" *ngIf="!addCommentShown">
+        Comment
+      </button>
+      <form [formGroup]="commentForm" (ngSubmit)="submitCommentForm()" *ngIf="addCommentShown">
+        <mat-form-field class="full-width-input" class="example-container">
+          <textarea matInput placeholder="Kommentar" formControlName="comment"></textarea>
+        </mat-form-field>
+        <button mat-flat-button color="primary" type="submit">Send Comment</button>
+        <button mat-flat-button type="button" (click)="addCommentShown=false">Cancel</button>
+      </form>
     </div>
   </div>
   <ng-template #knownDate>
@@ -54,6 +59,17 @@
       <span class="tag" *ngFor="let tag of med.tags">
         <a class="tag-link" href="/tag/{{tag.name}}">{{tag.name}}</a>
       </span>
+    </div>
+  </ng-template>
+  <ng-template #comments>
+    <div class="comment" *ngFor="let comment of med.comments">
+      <div class="comment-profile">
+        <div class="comment-profile-img">
+          <img src="{{ getProfileImage(comment.username) }}">
+        </div>
+      </div>
+      <div class="comment-content">{{ comment.comment }}</div>
+      <div class="comment-footer">{{ comment.timestamp * 1000 | date: 'dd.MM.yyyy hh:mm' }} - {{ comment.username }}</div>
     </div>
   </ng-template>
 </div>
