--- a/src/app/components/media/media.component.css
+++ b/src/app/components/media/media.component.css
@@ -1,9 +1,9 @@
 span.tag {
-  background-color: #2a2e31;
+  border: 1px solid gray;
   border-radius: 10px;
   padding: 2px 10px;
   margin: 0px 6px 6px 0;
-  font-size: 12px;
+  font-size: 14px;
   display: inline-block;
 }
 
@@ -11,101 +11,63 @@ form.tag-form {
   margin: 8px 0 0 0;
   display: none;
 }
-/*
-div.item-tagsinput {
-  min-height: 26px;
-  width: 460px;
-}
-div.tagsinput {
-  background-color: #1b1e1f;
-  padding: 5px;
-  overflow: hidden;
-  white-space: nowrap;
+
+.comment {
+  position: relative;
   margin-bottom: 10px;
-  font-size: 14px;
-}
-.tagsinput {
-  background: transparent;
-  background-color: transparent;
-  background-position-x: 0%;
-  background-position-y: 0%;
-  background-repeat: repeat;
-  background-attachment: scroll;
-  background-image: none;
-  background-size: auto;
-  background-origin: padding-box;
-  background-clip: border-box;
+  border-bottom: 1px solid lightgray;
 }
 
-div.tagsinput {
-  white-space: nowrap;
-  font-size: 14px;
+.comment .comment-profile {
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  padding: 0 4px 4px 0;
 }
 
-div.tagsinput input {
-  width: 250px;
-  margin: 0px;
-  font-family: helvetica;
-  font-size: 14px;
-  border: 1px solid transparent;
-  background: transparent;
-  outline: 0px;
+.comment > .comment-profile > .comment-profile-img {
+  background-size: cover;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
 }
 
-input.tagsinput-writebox {
-  padding: 0 !important;
-  color: #666;
+.comment .comment-content {
+  padding: 4px 0px;
+  margin-left: 50px;
+  white-space: pre-wrap;
 }
 
-.tags_clear {
-  clear: both;
-  width: 100%;
-  height: 0px;
-}
-
-.confirm-button,
-input[type="button"],
-input[type="submit"] {
-  font-weight: normal;
-  display: inline-block;
-  text-align: center;
-  padding: 8px 8px 6px 8px;
-  margin: 0;
-  color: #f5f7f6;
-  cursor: pointer;
-  background-color: #ee4d2e;
-  background-color: var(--theme-main-color);
+.comment .comment-footer {
+  margin-left: 50px;
   font-size: 12px;
 }
 
-input,
-textarea {
-  font-family: sans-serif;
-  font-size: 14px;
+.no-margin-bottom {
+  margin-bottom: 0px;
+}
+
+.page-fixed {
   margin: 0;
-  border: 0;
-  background-color: #1b1e1f;
-  color: #bbb;
-  outline: none;
-  padding: 5px;
-  border-radius: 0;
-  appearance: none;
-  -webkit-appearance: none;
+  overflow: hidden;
+  height: 100%;
 }
 
-input[type="button"].cancel,
-input[type="button"]:disabled,
-input[type="submit"]:disabled,
-input[type="submit"].cancel {
-  background-color: #212425;
-  color: #888;
-} */
-
-.example-container {
-  display: flex;
-  flex-direction: column;
+.page-fixed .media-info {
+  position: absolute;
+    top: 64px;
+    bottom: 0;
+    left: 0;
+    overflow-y: scroll;
+}
+.page-fixed .media-image {
+  position: absolute;
+    top: 64px;
+    bottom: 0;
+    right: 0;
+    overflow-y: scroll;
 }
 
-.example-container > * {
-  width: 100%;
+@media (min-width: 768px){
+
 }
