--- a/src/app/components/event/event.list.component.html
+++ b/src/app/components/event/event.list.component.html
@@ -1,5 +1,4 @@
-<p>events works!</p>
-<mat-card class="example-card" *ngFor="let event of events">
+<mat-card class="example-card" *ngFor="let event of events" [routerLink]="'/event/' + event.id">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title>{{event.title}}</mat-card-title>
