recentered filter field

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,8 @@
     </button>
   </form>
   <span class="spacer"></span>
+  <span class="spacer"></span>
+  <span class="spacer"></span>
   <button mat-icon-button aria-label="Add Event" routerLink="/event/new" *ngIf="route.url == '/events'">
     <mat-icon>add</mat-icon>
   </button>
