--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
   <span class="spacer"></span>
   <span class="spacer"></span>
   <span class="spacer"></span>
-  <button mat-icon-button aria-label="Add Event" routerLink="/event/new" *ngIf="route.url == '/events'">
+  <button mat-icon-button aria-label="Add Event" routerLink="/event/new" *ngIf="router.url == '/events'">
     <mat-icon>add</mat-icon>
   </button>
   <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
