Improved Tag API

--- a/src/app/components/media/media.component.html
+++ b/src/app/components/media/media.component.html
@@ -124,7 +124,7 @@
 <ng-template #tags>
   <div class="tags">
     <span class="tag" *ngFor="let tag of med.tags">
-      <a class="tag-link" href="/tag/{{tag.name}}">{{tag.name}}</a>
+      <a class="tag-link" href="/tag/{{tag}}">{{tag}}</a>
     </span>
   </div>
 </ng-template>
