--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,10 +32,14 @@
   <button mat-icon-button aria-label="Add Event" routerLink="/event/new" *ngIf="router.url == '/events'">
     <mat-icon>add</mat-icon>
   </button>
-  <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+  <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="vert_menu">
     <mat-icon>more_vert</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
+    <button mat-menu-item routerLink="/settings">
+      <mat-icon>settings</mat-icon>
+      <span>Settings</span>
+    </button>
     <button mat-menu-item (click)="doLogout()">
       <mat-icon>logout</mat-icon>
       <span>Logout</span>
