--- a/src/app/components/media/media.component.html
+++ b/src/app/components/media/media.component.html
@@ -134,7 +134,7 @@
 <ng-template #tags>
   <div class="tags">
     <span class="tag" *ngFor="let tag of med.tags">
-      <a class="tag-link" href="/tag/{{tag}}">{{tag}}</a>
+      <a class="tag-link" routerLink="/home/{{tag}}">{{tag}}</a>
     </span>
   </div>
 </ng-template>
